# advent_of_code_2023

./: 5_input  pyproject.toml  test.ipynb  test10.ipynb  test11.ipynb  test12.ipynb  test13.ipynb  test14.ipynb  test15.ipynb  test16.ipynb  test17.ipynb  test18.ipynb  test19.ipynb  test2.ipynb  test20.ipynb  test3.ipynb  test4.ipynb  test5.ipynb  test7.ipynb  test8.ipynb  test9.ipynb
