[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["marrose2 <martin@churney.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
advent-of-code-data = "^2.0.1"
ipython = "^8.18.1"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
